fixing the alignment and adding more css for rivers page

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -243,27 +243,27 @@ nav {
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 .idaho-card {
-    text-align: center;
+    text-align: left;
     display: block;
-    grid-column: 1/3;
+    grid-column: 1/4;
     grid-row: 1/8;
 }
 .utah-card {
     text-align: center;
     display: block;
-    grid-column: 4/6;
+    grid-column: 4/7;
     grid-row: 1/8;
 }
 .arizona-card {
-    text-align: center;
+    text-align: right;
     display: block;
-    grid-column: 7/9 ;
+    grid-column: 7/10 ;
     grid-row: 1/8;
 
 }
 .calendar {
-    grid-column: 4/6;
-    grid-row: 8/10;
+    grid-column: 4/7;
+    grid-row: 7/10;
 }
 
 .idaho-card, .utah-card, .arizona-card {
@@ -271,3 +271,9 @@ nav {
     width: 90%;
     padding: 5px;
 }
+
+.utah-img, .idaho-img, .arizona-img {
+    width: 100%;
+    border: 5px solid #006466;
+}
+
